# tsks

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tsks/: __init__.py  cli.py
tests/: test_cli.py
